--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ stack-data==0.6.3
 sympy==1.12
 threadpoolctl==3.2.0
 tomli==2.0.1
-torch==2.1.2+cu118
+torch==2.1.2
 torchaudio==2.1.2
 torchvision==0.16.2
 tornado==6.4
