--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,5 @@ jobs:
         pip install -r requirements.txt  # If you have a requirements.txt file
     - name: Run tests
       run: |
+        pip install pytest
         pytest  # Run pytest
